configure_file("${CMAKE_SOURCE_DIR}/components/common/qmldir"                           "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/qmldir")
configure_file("${CMAKE_SOURCE_DIR}/components/common/warning.png"                      "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/warning.png" COPYONLY)
configure_file("${CMAKE_SOURCE_DIR}/components/common/TextConstants.qml"                "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/TextConstants.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/Background.qml"    "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/Background.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/Button.qml"        "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/Button.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/Clock.qml"         "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/Clock.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/ComboBox.qml"      "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/ComboBox.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/ImageButton.qml"   "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/ImageButton.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/LayoutBox.qml"     "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/LayoutBox.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/Menu.qml"          "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/Menu.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/PasswordBox.qml"   "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/PasswordBox.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/PictureBox.qml"    "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/PictureBox.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/TextBox.qml"       "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/TextBox.qml")

configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/scrollbar.png"     "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/scrollbar.png" COPYONLY)
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/ScrollBar.qml"     "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/ScrollBar.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/SquareButton.qml"  "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/SquareButton.qml")
configure_file("${CMAKE_SOURCE_DIR}/components/${COMPONENTS_VERSION}/TextAutoBox.qml"   "${CMAKE_BINARY_DIR}/src/greeter/SddmComponents/TextAutoBox.qml")

install(DIRECTORY "${COMPONENTS_VERSION}/" DESTINATION "${QT_IMPORTS_DIR}/SddmComponents")
install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${COMPONENTS_VERSION}/" DESTINATION "${QT_IMPORTS_DIR}/SddmComponents")

install(DIRECTORY "common/" DESTINATION "${QT_IMPORTS_DIR}/SddmComponents")
install(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/common/" DESTINATION "${QT_IMPORTS_DIR}/SddmComponents")
